Client/src/Views/Admin/Admin.module.css
.gridContainer{
  display: grid;
  grid-template-columns: 15% 85%;
}

.sideBar{
  display: flex;
  flex-direction: column;
  justify-content: space-between;


  background-color: #9ac71fab;
  grid-column: 1 2;
  width: 100%;
  height: 90vh;
}

.sideBar button{
  width: 100%;
  height: 2.5rem;
  border-radius: 10px;
  color: white;
}

.sideBar button:disabled{
  background-color: #9AC71F;
}

.adminWindow{
  width: 100%;
  height: 90vh;overflow: scroll;
}

.windowSelector{
  margin-top: 5rem;
  height: 30%;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}

.configButton{
  margin-bottom: 5rem;
}

